<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    app:cardCornerRadius="5dp"
    app:layout_constraintCircleRadius="3dp"
    android:layout_margin="8dp"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/img_black_overlay"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:src="@drawable/black_overlay" />


        <ImageView
            android:id="@+id/img_available_row_element"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/available_3x" />

        <TextView

            android:id="@+id/txt_special_offer_row_element"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_alignBottom="@id/img_black_overlay"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="14dp"
            android:background="@drawable/special_text"
            android:gravity="center"
            android:text="@string/special_offer"
            android:textColor="#ffffff" />

        <ImageView
            android:id="@+id/img_fav_row_element"
            android:layout_width="40dp"
            android:layout_height="36dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="20dp"
            android:layout_marginTop="40dp"
            android:src="@drawable/save_btn"
            android:visibility="invisible" />



        <TextView
            android:id="@+id/txt_tile_row_item"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/img_black_overlay"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/row_element_name" />

        <TextView
            android:id="@+id/txt_details_row_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_tile_row_item"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:drawableStart="@drawable/map"
            android:text="@string/row_element_details" />

        <RatingBar
            android:id="@+id/rating_bar_row_element"
            style="@style/TextAppearance.AppCompat.Small"
            android:layout_width="wrap_content"
            android:layout_height="44dp"
            android:layout_below="@id/txt_details_row_item"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:isIndicator="true" />

        <TextView
            android:id="@+id/txt_rating_row_element"
            style="@style/TextAppearance.AppCompat.Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_details_row_item"
            android:layout_marginStart="8dp"
            android:layout_marginTop="27dp"
            android:layout_toEndOf="@id/rating_bar_row_element"
            android:text="@string/rating" />

        <TextView
            android:id="@+id/txt_week_days_row_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_rating_row_element"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/week_days" />

        <TextView
            android:id="@+id/txt_week_days_price_row_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_rating_row_element"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/txt_week_days_row_item"
            android:text="@string/week_days_price"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txt_week_days_price_special_row_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_rating_row_element"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/txt_week_days_price_row_item"
            android:text="@string/week_days_spec_ial_price"
            android:textColor="#F44336"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/txt_week_end_days_row_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_week_days_row_item"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/week_end_days" />

        <TextView
            android:id="@+id/txt_week_end_days_price_row_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_week_days_row_item"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/txt_week_end_days_row_item"
            android:text="@string/week_end_days_price"
            android:textColor="#000000" />

        <TextView
            android:id="@+id/txt_week_end_days_price_special_row_item"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_week_days_row_item"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@id/txt_week_end_days_price_row_item"
            android:text="@string/week_end_days_special_price"
            android:textColor="#F44336"
            android:visibility="invisible" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>